--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,16 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+executors:
+  ubuntu:
+    machine:
+      image: ubuntu-1604:202007-01
+jobs:
+  image-build:
+    executor: ubuntu
+    steps:
+      - checkout
+      - run:
+          name: image build
+          command: docker build --cache-from nginx --build-arg GCP_CREDS="${GOOGLE_CREDENTIALS}" -t kw-datalake-dlp .
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+     jobs:
+      - image-build
